# binmoments

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
config/: instruments.example.yaml
docs/: ARCHITECTURE.md  RUNBOOK.md  SETUP.md
docs/adr/: ADR-001-measurement-and-channel-model.md  ADR-002-bin-derivation-method.md  ADR-003-bin-schema-provenance-and-lifecycle.md  ADR-004-bitemporal-increment-fact-and-as-of-reproducibility.md  ADR-005-drift-detection-distance-and-baseline-policy.md  ADR-006-statistical-moments-and-entropy-from-binned-data.md  ADR-007-instrument-registry-and-geodetic-metadata.md  ADR-008-sensor-data-contract-and-synthetic-simulator.md  ADR-009-ingestion-and-medallion-layering.md  ADR-010-platform-choice-databricks-native.md  ADR-011-configuration-and-secrets.md  ADR-012-designed-for-forecasting.md  ADR-013-designed-for-correlation-mining.md  ADR-014-designed-for-cross-instrument-similarity.md  ADR-015-designed-for-rank-2-tensor-support.md  ADR-016-cross-schema-comparison-grid.md  ADR-017-value-band-classification-and-rule-engine.md  ADR-018-designed-for-spatial-coherence-anomaly-detection.md  ADR-019-designed-for-zero-inflated-heavy-tailed-channels.md  ADR-020-current-state-materialization.md
notebooks/: 00_setup.py  01_ingest_bronze.py  02_fingerprint_and_drift.py  03_materialize_current_state.py  04_plot_histogram.py  05_reset.py
tests/: test_bands.py  test_binning.py  test_current_state.py  test_drift.py  test_fact.py  test_model.py  test_moments.py  test_serving.py  test_simulator.py  test_smoke.py
tools/: reflow_adrs.py
(+42 files in other folders)
